salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/Application_Wizard_Visa__c.object-meta.xml
<CustomObject>
    <label>Application Wizard Visa</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Application Wizard Visa Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Wizard Visas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>