salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Actual_Qualification_Institution__c.field-meta.xml
<CustomField>
    <fullName>Actual_Qualification_Institution__c</fullName>
    <label>Actual Qualification/Institution</label>
    <type>TextArea</type>
</CustomField>