salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Application_wizard__c.field-meta.xml
<CustomField>
    <fullName>Application_wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application wizard</label>
    <referenceTo>Application_wizard__c</referenceTo>
    <relationshipLabel>Application Wizard Visas</relationshipLabel>
    <relationshipName>Application_Wizard_Visas</relationshipName>
    <type>Lookup</type>
</CustomField>