salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Completed_Course_at_Visa_Institution__c.field-meta.xml
<CustomField>
    <fullName>Completed_Course_at_Visa_Institution__c</fullName>
    <label>Completed Course at Visa Institution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>