salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Level_of_Studies__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Studies__c</fullName>
    <label>Level of Studies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEFR  level A2</fullName>
            </value>
            <value>
                <fullName>CEFR  level B1</fullName>
            </value>
            <value>
                <fullName>CEFR  level B2</fullName>
            </value>
            <value>
                <fullName>CEFR  level C1</fullName>
            </value>
            <value>
                <fullName>CEFR  level C2</fullName>
            </value>
            <value>
                <fullName>NQF level 1</fullName>
            </value>
            <value>
                <fullName>NQF level 2</fullName>
            </value>
            <value>
                <fullName>NQF level 3</fullName>
            </value>
            <value>
                <fullName>NQF level 4</fullName>
            </value>
            <value>
                <fullName>NQF level 5</fullName>
            </value>
            <value>
                <fullName>NQF level 6</fullName>
            </value>
            <value>
                <fullName>NQF level 7</fullName>
            </value>
            <value>
                <fullName>NQF level 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>