salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Other_Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Visa_Type__c</fullName>
    <label>Other Visa Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>