salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Visa_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expiry_Date__c</fullName>
    <label>Visa Expiry Date</label>
    <type>Date</type>
</CustomField>