salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Visa_Institution__c.field-meta.xml
<CustomField>
    <fullName>Visa_Institution__c</fullName>
    <label>Visa Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>