salesforce-main/src/main/default/objects/Application_Wizard_Visa__c/fields/Visa_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Visa_Qualification__c</fullName>
    <label>Visa Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>